--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,6 @@ volumes:
   # The rabbitmq data store volume
   redis-data:
     driver: local
-  # We'll also define a volume that will store gems installed manually after the initial app
-  # development image build process:
-  app-gems:
-    driver: local
 
 services:
   # Our PostgreSQL service:
@@ -52,20 +48,16 @@ services:
     build:
       context: .
       dockerfile: dev.Dockerfile
-    image: vovimayhem/docker-compose-rails-dev-example:development
     entrypoint: /usr/src/app/development-entrypoint
 
     # The command this container will run - in this case, this container will run our sidekiq
     # process:
-    command: sidekiq -c 25 -q default
+    command: bundle exec sidekiq -c 25 -q default
 
     volumes:
       # Mount our app code directory (".") into our app containers at the
       # "/usr/src/app" folder:
       - .:/usr/src/app
-
-      # Mount the 'gems' volume on the folder that stores bundled gems:
-      - app-gems:/usr/local/bundle
 
     # Keep the stdin open, so we can attach to our app container's process and do things such as
     # byebug, etc:
@@ -105,19 +97,6 @@ services:
   web:
     # We'll copy from &app_base, and override:
     <<: *app_base
-    command: rails server -p 3000 -b 0.0.0.0
+    command: bundle exec rails server -p 3000 -b 0.0.0.0
     ports:
       - "3000:3000" # Bind our host's port 3000 to the app port 3000:
-
-  # App Guard: Keeps running tests on a separate process:
-  test:
-    # We'll copy from &app_base, and override:
-    <<: *app_base
-    command: guard start --no-bundler-warning --no-interactions
-    environment:
-      <<: *app_environment
-      # PostgreSQL Test Database:
-      DATABASE_URL: postgres://postgres:3x4mpl3@db.local:5432/example_test
-      # Run the app in the 'test' environment, instead of the default 'developent'
-      RACK_ENV: test
-      RAILS_ENV: test
